<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="30dp"
    android:paddingTop="50dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/first_name_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:autofillHints="First Name"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/first_name"
        android:inputType="textCapWords"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/last_name_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/last_name_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="Last Name"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/last_name"
        android:inputType="textCapWords"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/first_name_edit_text"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/standard_class_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:autofillHints="Standard"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/std"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/sec_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/school_name_edit_text" />

    <EditText
        android:id="@+id/sec_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="15dp"
        android:autofillHints="Section"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/sec"
        android:inputType="textCapCharacters"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/create_button"
        app:layout_constraintStart_toEndOf="@+id/standard_class_edit_text"
        app:layout_constraintTop_toBottomOf="@id/school_name_edit_text" />

    <Button
        android:id="@+id/create_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/create"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sec_edit_text"
        app:layout_constraintTop_toBottomOf="@id/school_name_edit_text" />

    <EditText
        android:id="@+id/school_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:autofillHints="School"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/school_name"
        android:inputType="textCapWords"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/last_name_edit_text" />


    <TextView
        android:id="@+id/introduction_text_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/permanentmarker_regular"
        android:text="@string/enter_all_fields_to_create_your_my_self_introduction"
        android:textColor="@color/teal_700"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sec_edit_text" />
</androidx.constraintlayout.widget.ConstraintLayout>